gcc/testsuite/gfortran.dg/conflicts.f90
@@ -2,16 +2,16 @@
 ! Check for conflicts
 ! PR fortran/29657
 
-function f1() ! { dg-error "has no IMPLICIT type" }
+function f1() ! { dg-error "PROCEDURE attribute conflicts with SAVE attribute" }
   implicit none
-  real, save :: f1 ! { dg-error "PROCEDURE attribute conflicts with SAVE attribute" }
+  real, save :: f1
   f1 = 1.0
 end function f1
 
-function f2()
+function f2() ! { dg-error "PROCEDURE attribute conflicts with SAVE attribute" }
   implicit none
   real :: f2
-  save f2 ! { dg-error "PROCEDURE attribute conflicts with SAVE attribute" }
+  save f2
   f2 = 1.0
 end function f2
 
